Fixed scrolling in file system (Flex & Overflow drilling)

--- a/src/routes/GUI.css
+++ b/src/routes/GUI.css
@@ -15,6 +15,8 @@
   background-color: transparent;
   border: 2px solid #6347a0;
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
 }
 
 .gui_window_bar
@@ -51,6 +53,9 @@
 {
   width: inherit;
   height: inherit;
+  display: flex;
+  flex: 1;
+  overflow: hidden;
 }
 
 .gui_icon_container
@@ -125,6 +130,7 @@
   width: 100%;
   height: 100%;
   padding-left: 25px;
+  overflow-y: auto;
 }
 
 .gui_tab-button
@@ -154,15 +160,13 @@
   background-color: inherit;
   color: white;
   border-radius: 8px;
-  height: 100%;
-  overflow-y: auto;
   padding-top: 25px;
 }
 
 .gui_file_explorer_container
 {
-  width: inherit;
-  height: inherit;
+  display: flex;
+  flex: 1;
 }
 
 .gui_notepad_container
@@ -186,4 +190,9 @@
   padding: 15px;
   box-sizing: border-box;
   white-space: pre-line;
+}
+
+.gui_project_desc
+{
+  border-bottom: 2px solid gray;
 }
